--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,5 +1,5 @@
 db.driver=com.mysql.cj.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/jdbc_kata?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&amp&serverTimezone=UTC
-db.username=
-db.password=
+db.username=root
+db.password=root12345
 db.entity.package = web.model
